Enhance index.html with SEO meta tags
Added meta tags for SEO and verification.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+  <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="abcdefg1234567890" />
+  <title>Martin Studios</title>
+  <meta name="description" content="Martin Studios: World news, sports, music, games, and videos." />
+  <meta name="robots" content="index, follow" />
+</head>
 <head>
   <meta charset="UTF-8">
   <title>Martin Studios - Global News Platform</title>
@@ -231,3 +238,4 @@
 
 </body>
 </html>
+
