Refactor index.html to remove duplicates
Removed duplicate head elements and adjusted meta tags.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="XcngW8N2bS9l1-8KiLLrazncovMSxGVUKcaDOTeX5Qg" />
   <meta charset="UTF-8" />
   <meta name="google-site-verification" content="abcdefg1234567890" />
   <title>Martin Studios</title>
@@ -238,4 +239,5 @@
 
 </body>
 </html>
+
 
